--- a/League/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/League/Views/Account/ResetPasswordConfirmation.cshtml
@@ -2,6 +2,7 @@
 @inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = Localizer["New Password Confirmation"].Value;
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
 }
 <h2 class="h2">@ViewData["Title"].</h2>
 <hr/>
@@ -10,6 +11,6 @@
         @Localizer["The new password is saved and activated"].<br />
     </site-alert>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a>.
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@organizationRoute" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a>.
     </p>
 </div>
