--- a/League/Views/Manage/Index.cshtml
+++ b/League/Views/Manage/Index.cshtml
@@ -6,6 +6,7 @@
 @model IndexViewModel
 @{
     ViewData["Title"] = Localizer["Change account settings"];
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
 }
 <div>
     <h2 class="h2">@ViewData["Title"]</h2>
@@ -16,7 +17,7 @@
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<ChangeUsernameViewModel>(nameof(ChangeUsernameViewModel.Username)))</li>
         <li class="list-inline-item col-md-7">@(User.Identity.Name)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ChangeUserName))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ChangeUserName), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<RegisterViewModel>(nameof(RegisterViewModel.Password)))</li>
@@ -33,38 +34,38 @@
         <li class="list-inline-item col-md-auto">
             @if (Model.HasPassword)
             {
-                <button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ChangePassword))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button>
+                <button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ChangePassword), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button>
             }
             else
             {
-                <button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.SetPassword))" class="btn btn-sm btn-primary">@Localizer["Create"]</button>
+                <button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.SetPassword), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Create"]</button>
             }
         </li>
     </ul>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@Localizer["Personal Details"]</li>
         <li class="list-inline-item col-md-7">@Model.ApplicationUser.CompleteName</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditPersonalDetails))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditPersonalDetails), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<ChangeEmailViewModel>(nameof(ChangeEmailViewModel.Email)))</li>
         <li class="list-inline-item col-md-7">@Model.ApplicationUser.Email</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ChangeEmail))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ChangeEmail), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditEmail2ViewModel>(nameof(EditEmail2ViewModel.Email2)))</li>
         <li class="list-inline-item col-md-7">@(Model.ApplicationUser.Email2 ?? Localizer["[Not set]"].Value)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditEmail2))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditEmail2), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditPhoneViewModel>(nameof(EditPhoneViewModel.PhoneNumber)))</li>
         <li class="list-inline-item col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditPhoneNumber))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditPhoneNumber), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@(Metadata.GetDisplayName<EditPhone2ViewModel>(nameof(EditPhone2ViewModel.PhoneNumber2)))</li>
         <li class="list-inline-item col-md-7">@Html.Raw(string.IsNullOrEmpty(Model.ApplicationUser.PhoneNumber2) ? Localizer["[Not set]"].Value : Model.ApplicationUser.PhoneNumber2)</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditPhoneNumber2))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.EditPhoneNumber2), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@Localizer["Linked Social Logins"]</li>
@@ -80,13 +81,13 @@
                 }
             }
         </li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ManageLogins))" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.ManageLogins), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-primary">@Localizer["Edit"]</button></li>
     </ul>
     <h4 class="text-danger">@Localizer["Danger Zone"]</h4>
     <ul class="list-inline no-gutters">
         <li class="list-inline-item text-success col-md-3">@Localizer["Delete Account"]</li>
         <li class="list-inline-item col-md-7">@Localizer["Caution: Once the account is deleted, this is final."]</li>
-        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.DeleteAccount))" class="btn btn-sm btn-outline-danger">@Localizer["Delete"]</button></li>
+        <li class="list-inline-item col-md-auto"><button type="button" site-toggle-modal-ajax site-data-url="@Url.Action(nameof(Manage.DeleteAccount), nameof(Manage), new { Organization = organizationRoute })" class="btn btn-sm btn-outline-danger">@Localizer["Delete"]</button></li>
     </ul>
     <div class="text-muted">
         @{ var zonedTime = Model.TimeZoneConverter.ToZonedTime(Model.ApplicationUser.ModifiedOn);}
