--- a/League/Views/Account/ConfirmEmailError.cshtml
+++ b/League/Views/Account/ConfirmEmailError.cshtml
@@ -2,6 +2,7 @@
 @inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = Localizer["Your email could not be confirmed"].Value;
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
 }
 <h2 class="h2">@ViewData["Title"].</h2>
 <hr/>
@@ -17,6 +18,6 @@
         @Localizer["Please consider to create an account again. Then, another confirmation email will be sent to you."]
     </p>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.CreateAccount)" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Create Account"]</a>
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.CreateAccount)" asp-route-organization="@organizationRoute" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Create Account"]</a>
     </p>
 </div>
