--- a/League/Views/Account/Register.cshtml
+++ b/League/Views/Account/Register.cshtml
@@ -4,10 +4,11 @@
 @inject IViewLocalizer Localizer
 @{
     ViewData["Title"] = Localizer["Create a new user account"];
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
     List<SelectListItem> GenderList()
     {
-        return new List<SelectListItem> {new SelectListItem {Value = string.Empty, Text = Localizer["Please choose"].Value}, 
-            new SelectListItem {Value = "f", Text = Localizer["Mrs."].Value}, 
+        return new List<SelectListItem> {new SelectListItem {Value = string.Empty, Text = Localizer["Please choose"].Value},
+            new SelectListItem {Value = "f", Text = Localizer["Mrs."].Value},
             new SelectListItem {Value = "m", Text = Localizer["Mr."].Value}};
     }
 }
@@ -16,7 +17,7 @@
     <hr />
 </div>
 <div>
-    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.Register)" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+    <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.Register)" asp-route-organization="@organizationRoute" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
         <site-validation-summary show="All">
             <b>@Localizer["Input has some issues"]:</b>
         </site-validation-summary>
