--- a/League/Views/Account/ResetPassword.cshtml
+++ b/League/Views/Account/ResetPassword.cshtml
@@ -4,11 +4,12 @@
 @model ResetPasswordViewModel
 @{
     ViewData["Title"] = Localizer["Reset password"];
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
 }
 <div>
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr/>
-   <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+   <form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ResetPassword)" asp-route-organization="@organizationRoute" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
        <site-validation-summary show="All">
            <b>@Localizer["Input has some issues"]:</b>
        </site-validation-summary>
