--- a/League/Views/Account/SignInRejected.cshtml
+++ b/League/Views/Account/SignInRejected.cshtml
@@ -2,6 +2,7 @@
 @inject IViewLocalizer Localizer
 @model Microsoft.AspNetCore.Identity.SignInResult
 @{
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
     if (Model == Microsoft.AspNetCore.Identity.SignInResult.LockedOut)
     {
         ViewData["Title"] = Localizer["Account has been locked out"];
@@ -22,6 +23,6 @@
         @(Localizer["Please try to sign-in later"]).<br />
     </site-alert>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign in"]</a>
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@organizationRoute" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign in"]</a>
     </p>
 </div>
