--- a/League/Views/Manage/_ChangePasswordModalPartial.cshtml
+++ b/League/Views/Manage/_ChangePasswordModalPartial.cshtml
@@ -2,10 +2,11 @@
 @using Microsoft.AspNetCore.Mvc.Localization
 @inject IViewLocalizer Localizer
 @model ChangePasswordViewModel
+@{var organizationRoute = ViewContext.RouteData.Values["organization"];}
 <!-- Modal -->
 <modal id="change-password" title="@Localizer["Change Password"].Value" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.ChangePassword)" asp-route-organization="@organizationRoute" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
