--- a/League/Views/Manage/_EditPhone2ModalPartial.cshtml
+++ b/League/Views/Manage/_EditPhone2ModalPartial.cshtml
@@ -3,11 +3,11 @@
 @inject IViewLocalizer Localizer
 @model EditPhone2ViewModel
 @{ const string BtnRemove = "btn-remove";
-    ViewContext.ClientValidationEnabled = true;}
+    ViewContext.ClientValidationEnabled = true; var organizationRoute = ViewContext.RouteData.Values["organization"];}
 <!-- Modal -->
 <modal id="change-email" title="@Localizer["Change Additional Phone Number"].Value" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditPhoneNumber2)" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditPhoneNumber2)" asp-route-organization="@organizationRoute" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
