--- a/League/Views/Manage/_EditPhoneModalPartial.cshtml
+++ b/League/Views/Manage/_EditPhoneModalPartial.cshtml
@@ -5,11 +5,12 @@
 @{
     const string BtnRemove = "btn-remove";
     ViewContext.ClientValidationEnabled = true;
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
 }
 <!-- Modal -->
 <modal id="change-email" title="@Localizer["Change Primary Phone Number"].Value" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditPhoneNumber)" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditPhoneNumber)" asp-route-organization="@organizationRoute" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
