--- a/League/Views/Match/Results.cshtml
+++ b/League/Views/Match/Results.cshtml
@@ -6,6 +6,7 @@
 @model League.Models.MatchViewModels.ResultsViewModel
 @{
     ViewData["Title"] = Localizer["Match Results"].Value + " - " + Model.Tournament.Name;
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
     if (Model.CompletedMatches.Count == 0)
     {
         <div class="mb-0 pb-1">
@@ -136,7 +137,7 @@
                                                 </a>
                                                 <div class="dropdown-menu shadow" role="menu">
                                                     <a href="#" tabindex="0" data-round-id="@match.RoundId" data-team-name="@match.HomeTeamNameForRound" class="dropdown-item filter-link">@Localizer["Filter matches for this team"]</a>
-                                                    <a asp-action=@nameof(League.Controllers.Match.EnterResult) asp-controller=@nameof(League.Controllers.Match) asp-route-id=@(match.Id)
+                                                    <a asp-action=@nameof(League.Controllers.Match.EnterResult) asp-controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@(match.Id)
                                                        tabindex="0" class="dropdown-item"
                                                        site-authorize-resource site-resource=@ToMatchEntity(match)
                                                        site-requirement=@League.Authorization.MatchOperations.EnterResult>@Localizer["Edit this match"]</a>
@@ -148,7 +149,7 @@
                                                 </a>
                                                 <div class="dropdown-menu shadow" role="menu" aria-labelledby="dropdownMenuLink">
                                                     <a href="#" tabindex="0" data-round-id="@match.RoundId" data-team-name="@match.GuestTeamNameForRound" class="dropdown-item filter-link">@Localizer["Filter matches for this team"]</a>
-                                                    <a asp-action=@nameof(League.Controllers.Match.EnterResult) asp-controller=@nameof(League.Controllers.Match) asp-route-id=@(match.Id) 
+                                                    <a asp-action=@nameof(League.Controllers.Match.EnterResult) asp-controller=@nameof(League.Controllers.Match) asp-route-organization="@organizationRoute" asp-route-id=@(match.Id) 
                                                        tabindex="0" class="dropdown-item"
                                                        site-authorize-resource site-resource=@ToMatchEntity(match)
                                                        site-requirement=@League.Authorization.MatchOperations.EnterResult>@Localizer["Edit this match"]</a>
