--- a/League/Views/TeamApplication/List.cshtml
+++ b/League/Views/TeamApplication/List.cshtml
@@ -7,7 +7,7 @@
 @model League.Models.TeamApplicationViewModels.ApplicationListModel
 @{
     ViewData["Title"] = Localizer["Team Registrations"].Value + " - " + Model.Tournament.Name;
-
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
     string ZonedTimeString(long teamId)
     {
         return Model.TimeZoneConverter.ToZonedTime(Model.TeamRegisteredOn[teamId]).DateTimeOffset.DateTime.ToShortDateString();
@@ -19,7 +19,7 @@
         <partial name="@nameof(League.ViewNames.TeamApplication._TeamApplicationMessagesPartial)" />
         @if (SiteContext.ApplicationAllowed)
         {
-            <a asp-controller="@nameof(League.Controllers.TeamApplication)" asp-action="@nameof(League.Controllers.TeamApplication.Start)" class="btn btn-primary mb-2">@Localizer["Register team now"]</a>
+            <a asp-controller="@nameof(League.Controllers.TeamApplication)" asp-action="@nameof(League.Controllers.TeamApplication.Start)" asp-route-organization="@organizationRoute" class="btn btn-primary mb-2">@Localizer["Register team now"]</a>
         }
         else
         {
