--- a/League/Views/TeamApplication/SelectTeam.cshtml
+++ b/League/Views/TeamApplication/SelectTeam.cshtml
@@ -5,12 +5,13 @@
 @model League.Models.TeamApplicationViewModels.ApplicationSelectTeamModel
 @{
     ViewData["Title"] = Localizer["Team Registration"].Value + " - " + Model.TournamentName;
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
 }
 <div class="mb-0 pb-1">
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr class="mb-2" />
     @* Form with only 1 input field can be submitted with enter key. So we have to prevent default submit behavior and trigger a click on saveBtn *@
-    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectTeam)" method="post" role="form">
+    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectTeam)" asp-route-organization="@organizationRoute" method="post" role="form">
         <site-validation-summary show="All" unique-error-text="true"></site-validation-summary>
         <div class="row">
             <div class="form-group col-12 col-md-8">
@@ -44,12 +45,12 @@
         <div class="row">
             <div class="form-group col-12 col-md-6">
                 <label class="mt-0">@Localizer["The team has never participated before"]</label>
-                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-isnew="true" class="btn btn-primary">@Localizer["Create a new team"]</a>
+                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-organization="@organizationRoute" asp-route-isnew="true" class="btn btn-primary">@Localizer["Create a new team"]</a>
             </div>
         </div>
         <div class="row">
             <div class="form-group col-12 col-md-6">
-                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.Start)" class="btn btn-secondary">@Localizer["Back"]</a>
+                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.Start)" asp-route-organization="@organizationRoute" class="btn btn-secondary">@Localizer["Back"]</a>
             </div>
         </div>
     </form>
