--- a/League/Views/Upload/TeamPhoto.cshtml
+++ b/League/Views/Upload/TeamPhoto.cshtml
@@ -4,6 +4,7 @@
 @model League.Models.UploadViewModels.TeamPhotoViewModel
 @{
     ViewData["Title"] = Localizer["Upload Team Photo"].Value;
+    var organizationRoute = ViewContext.RouteData.Values["organization"];
 }
 <div class="mb-0 pb-1">
     <h2 class="h2">@(ViewData["Title"])</h2>
@@ -12,7 +13,7 @@
     <div class="row">
         <div class="col-md-9">
             <div id="dropzone pb-2">
-                <form action="@(Url.Action(nameof(Upload.TeamPhoto), nameof(Upload), new {id = ""}))" class="dropzone dz-clickable" id="teamPhotoUploader">
+                <form asp-action="@nameof(Upload.TeamPhoto)" asp-controller="@nameof(Upload)" asp-route-organization="@organizationRoute" asp-route-id="" class="dropzone dz-clickable" id="teamPhotoUploader">
                     <input type="hidden" name="teamId" value="@Model.Team.Id" />
                     <div class="dz-message">
                         @Localizer["Drop files here or click to select"].
@@ -30,7 +31,7 @@
             <div>@Localizer["Current team photo"]:</div>
             @if (string.IsNullOrEmpty(Model.PhotoFileUrl))
             {
-                <div>None</div>
+            <div>@Localizer["None"]</div>
             }
             else
             {
@@ -52,12 +53,12 @@
         <div>@Localizer["Delete the photo of team '{0}'?", Model.Team.Name]</div>
     </modal-body>
     <modal-footer show-dismiss="true" dismiss-text="@Localizer["Cancel"].Value">
-        <a class="btn btn-primary" asp-action="@nameof(Upload.RemoveTeamPhoto)" asp-controller="@nameof(Upload)" asp-route-id="@Model.Team.Id" >@Localizer["Delete team photo"]</a>
+        <a class="btn btn-primary" asp-action="@nameof(Upload.RemoveTeamPhoto)" asp-controller="@nameof(Upload)" asp-route-organization="@organizationRoute" asp-route-id="@Model.Team.Id" >@Localizer["Delete team photo"]</a>
     </modal-footer>
 </modal>
 @section styles
 {
-    <link rel="stylesheet" href="~/lib/dropzone/dropzone.min.css" />
+    <link rel="stylesheet" href="@Url.Content("~/lib/dropzone/dropzone.min.css")" />
     <style type="text/css">
         .dropzone {
             background: white !important;
